--- a/snake.html
+++ b/snake.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Snake Game with 
-          <div class="geeks">Geeks For Geeks</div>
+          <div class="snake">Snake and ladder</div>
     </h1>
     <canvas id="board"></canvas>
 </body>
