--- a/snake.html
+++ b/snake.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Snake Game with 
-          <div class="snake">Snake & ladder Game</div>
+          <div class="snake">Snake & ladder Game by Html,css &Javascript</div>
     </h1>
     <canvas id="board"></canvas>
 </body>
